fix(plugins/plugin-editor): fix sidecar editor tooltip contrast issue

--- a/plugins/plugin-editor/web/css/editor.css
+++ b/plugins/plugin-editor/web/css/editor.css
@@ -130,3 +130,8 @@ body[kui-theme-style] .monaco-editor .selected-text {
   transition: background 300ms ease-in-out;
   background: var(--color-selection-background);
 }
+
+/* tooltip text is unreadble */
+.monaco-editor .monaco-editor-hover .hover-row p {
+  color: #171717;
+}
